# thera-panacea

./: .gitignore  README.md  cleaned_data_baseline_model.ipynb  final_training_and_prediction.ipynb  label_val.txt  pyproject.toml  raw_data_baseline_model.ipynb  requirements.txt
src/thera_panacea/: utils.py
src/thera_panacea/dataset/: dataset.py
src/thera_panacea/etl/: transform.py
src/thera_panacea/model/: baseline_model.py
src/thera_panacea/trainer/: trainer.py
src/thera_panacea/visualize/: visualize.py
thera_panacea/: visualize.py
thera_panacea/dataset/: baseline_dataset.py
thera_panacea/etl/: extract.py  transform.py
thera_panacea/model/: baseline_model.py
thera_panacea/trainer/: baseline_trainer.py
