[tool.poetry]
name = "thera-panacea"
version = "0.1.0"
description = "Technical assessment"
authors = ["Serge <serge.andre.masson@gmail.com>"]
readme = "README.md"
packages = [{include = "thera_panacea"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
pillow = "^10.0.0"
scikit-learn = "^1.3.0"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
