[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thera-panacea"
version = "0.0.1"
authors = [
  { name="Serge MASSON", email="serge.andre.masson@gmail.com" },
]
description = "Technical assessment"
readme = "README.md"
requires-python = ">=3.10"


classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Computer vision",
    "features engineering",
    "machine learning"
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
packages = ["thera_panacea"]


[project.urls]
"Homepage" = "https://github.com/Serge-Andre-MASSON/thera-panacea"
